# mdbx-containers

./: .gitignore  .gitmodules  AGENTS.md  AnyValueTable_8hpp.html  AnyValueTable_8hpp.js  AnyValueTable_8hpp_source.html  BaseTable_8hpp.html  BaseTable_8hpp.js  BaseTable_8hpp_source.html  CHANGELOG.md  CMakeLists.txt  Config_8hpp.html  Config_8hpp.js  Config_8hpp_source.html  Connection_8hpp.html  Connection_8hpp.js  Connection_8hpp_source.html  Connection_8ipp.html  Connection_8ipp_source.html  Doxyfile  KeyMultiValueTable_8hpp.html  KeyMultiValueTable_8hpp.js  KeyMultiValueTable_8hpp_source.html  KeyTable_8hpp.html  KeyTable_8hpp.js  KeyTable_8hpp_source.html  KeyValueTable_8hpp.html  KeyValueTable_8hpp.js  KeyValueTable_8hpp_source.html  MdbxException_8hpp.html  MdbxException_8hpp.js  MdbxException_8hpp_source.html  NOTICE  PHILOSOPHY.md  README-RU.md  README.md  TransactionTracker_8hpp.html  TransactionTracker_8hpp.js  TransactionTracker_8hpp_source.html  TransactionTracker_8ipp.html  (+201 more)
.claude/: CLAUDE.md
.claude/agents/: analyst.md  architect.md  code-reviewer.md  code-simplifier.md  critic.md  debugger.md  designer.md  document-specialist.md  executor.md  explore.md  git-master.md  planner.md  qa-tester.md  scientist.md  security-reviewer.md  test-engineer.md  tracer.md  verifier.md  writer.md
.claude/rules/: context-mode.md  delegation.md  mode-triggers.md  nuanced-analysis.md  orchestrator-mode.md  output-style.md  software-laws.md  tool-priority.md
.github/workflows/: ci-mingw.yml  ci.yml  publish.yaml  stress.yml
agents/: build-and-test.md  codebase-orientation.md  coding-agent-workflow.md  coding-style.md  commit-conventions.md  implementation-notes.md  project-overview.md  table-api-guide.md
benchmarks/: README-sync-RU.md  README-sync.md  sync_tick_hub_benchmark.cpp
build-cpp17-examples-deps/: CMakeCache.txt  Makefile  cmake_install.cmake
build-cpp17-examples-deps/libs/: Makefile
build-tests-deps/: CMakeCache.txt  Makefile  cmake_install.cmake
build-tests-deps/libs/: Makefile  cmake_install.cmake
cmake/: mdbx_containersConfig.cmake.in  mdbx_containersTransportBackends.cmake
docs/: configuration.dox  groups.dox  mainpage.dox  tables.dox  vector_store.dox
examples/: README-sync-RU.md  README-sync.md  any_value_table_example.cpp  backup_basic_example.cpp  config_initialized_table.cpp  connection_shutdown_example.cpp  custom_struct_example.cpp  hashed_key_value_store_example.cpp  key_multi_value_table_example.cpp  key_table_example.cpp  manual_transaction_example.cpp  multi_table_demo.cpp  sequence_table_example.cpp  single_transaction_demo.cpp  sync_01_lifecycle_direct_peer.cpp  sync_02_incremental_direct_peer.cpp  sync_03_multi_table.cpp  sync_04_primary_to_replicas.cpp  sync_05_three_node_mesh.cpp  sync_06_threaded_transport.cpp  sync_07_worker_observer.cpp  sync_08_transport_boundary.cpp  sync_09_transport_codec.cpp  sync_10_custom_transport.cpp  sync_11_http_adapter.cpp  sync_12_transport_middleware.cpp  sync_13_http_simple_web_server.cpp  sync_14_websocket_adapter.cpp  sync_15_http_policy_context.cpp  sync_16_worker_http_transport.cpp  sync_17_websocket_simple_web_server.cpp  sync_18_http_node_fleet.cpp  sync_19_kurlyk_http_client.cpp  sync_20_observability.cpp  sync_20_transport_production_wrapper.cpp  sync_21_worker_guard_apply_hooks.cpp  sync_22_node_session_minimal.cpp  sync_codec_dump_example.cpp  sync_example_utils.hpp  sync_replication_example.cpp  (+2 more)
guides/: build-and-test.md  codebase-orientation.md  coding-agent-workflow.md  coding-style.md  commit-conventions.md  critical-defaults.md  implementation-notes.md  project-overview.md  sync-audit-followups.md  sync-production-transport.md  sync-table-coverage.md  sync-transport-production.md  sync-v0.1-readiness.md  table-api-guide.md
include/: mdbx_containers.hpp
include/mdbx_containers/: AnyValueTable.hpp  Backup.hpp  Hash.hpp  HashedKeyValueStore.hpp  KeyMultiValueTable.hpp  KeyOrderedMultiValueTable.hpp  KeyTable.hpp  KeyValueContainer.hpp  KeyValueTable.hpp  SequenceTable.hpp  Sync.hpp  ValueTable.hpp  common.hpp  sync.hpp  tables.hpp  vector.hpp
libs/: CMakeLists.txt
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  defines_0.js  defines_1.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  files_0.js  (+57 more)
src/: mdbx_containers_static.cpp
tests/: any_value_table_test.cpp  connection_unicode_path_test.cpp  hashed_key_value_store_test.cpp  header_all_umbrella_test.cpp  header_sync_disabled_test.cpp  header_sync_transport_umbrella_test.cpp  header_sync_umbrella_test.cpp  header_tables_umbrella_test.cpp  header_vector_umbrella_test.cpp  key_multi_value_table_test.cpp  key_ordered_multi_value_table_test.cpp  key_table_test.cpp  kv_container_all_types_test.cpp  kv_container_test.cpp  mdbx_test.cpp  path_resolution_test.cpp  path_utils_unicode_test.cpp  sequence_table_test.cpp  test_assert.hpp  test_backup.cpp  test_codec_bounds.cpp  test_codec_flags.cpp  test_codec_golden.cpp  test_codec_roundtrip.cpp  test_http_transport.cpp  test_logical_change.cpp  test_logical_table_adapter.cpp  test_sync_capture.cpp  test_sync_engine.cpp  test_sync_randomized.cpp  test_sync_randomized_lifecycle.cpp  test_sync_replication.cpp  test_sync_stores.cpp  test_sync_stress.cpp  test_sync_worker.cpp  test_transaction_provenance.cpp  test_transport_boundary.cpp  test_transport_codec.cpp  test_transport_middleware.cpp  test_txn_overlap.cpp  (+5 more)
tests/cmake/installed_lowercase_mdbx/: CMakeLists.txt  main.cpp
tests/cmake/installed_transport_backend/: CMakeLists.txt  kurlyk_http.cpp  main.cpp  simple_web_http.cpp  simple_web_websocket.cpp
tests/cmake/installed_transport_backend_negative/: CMakeLists.txt
tests/cmake/parent_targets/: CMakeLists.txt
(+91 files in other folders)
